--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "build": "node lib/index.js"
+    "build": "echo '** Building helpKeyword.comfy' && node lib/index.js"
   },
   "keywords": [],
   "author": "woldie",
